Reserva RF5 en front
Ademas de correciones varias en todos lados